# fit-verify-pec

./: README.md  pyproject.toml
.github/actions/setup-fit-env/: action.yml
.github/workflows/: contract-tests.yml  e2e-tests.yml  integration-tests.yml  lint.yml  security-code.yml  security-deps.yml  type-check.yml  unit-tests.yml
fit_verify_pec/controller/: expiration_date.py  generate_report.py  html_2_pdf.py  provider.py  revoke.py  signature.py  verify_pec.py
fit_verify_pec/lang/: en.json  it.json
fit_verify_pec/ui/: verify_pec.ui
fit_verify_pec/view/: verify_pec.py  verify_pec_ui.py
tests/: conftest.py
tests/contract/: test_verify_pec_contract.py
tests/e2e/: test_verify_pec_e2e.py
tests/integration/: test_verify_pec_integration.py
tests/unit/: test_lang.py  test_main.py  test_verify_pec.py
