[tool.poetry]
name = "fit_verify_pec"
version = "1.0.0"
description = "FIT Verify PEC Module"
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_verify_pec" }
]

exclude = ["fit_verify_pec/ui/**"]

include = [
    "fit_assets/templates/*.html",
    "fit_assets/images/logo-640x640.png"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "6.9.0"
cryptography = ">=42,<43.1"
bs4 = "^0.0.2"


fit-cases = {git = "https://github.com/fit-project/fit-cases.git", tag = "v1.0.0-rc1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
pythonpath = ["."]
markers = [
    "unit: fast isolated tests",
    "contract: cross-module contract tests for public interfaces and integrations",
    "integration: integration tests with real external resources and dependencies",
    "e2e: end-to-end UI workflow tests",
]